--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,11 @@
+body {
+  font-family: 'Noto Sans TC', 'Baloo Tamma 2', cursive, sans-serif;
+}
+
+ls-3 {
+  letter-spacing: 3px;
+}
+
 .logo {
   display: block;
   width: 110px;
